--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vercel/analytics": "^1.5.0",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
